# CliPP2

./: .gitignore  README.md  __init__.py  _version.py  cli.py  pyproject.toml
.github/workflows/: ci.yml  gpu-ci.yml
core/: __init__.py  bic.py  fusion_solver.py  graph.py  model.py  partition_search.py
core/fusion/: __init__.py  certificates.py  defaults.py  graph.py  graph_ops.py  multiplicity.py  partition_starts.py  quotient_workset.py  refit.py  solver.py  starts.py  torch_backend.py  types.py
io/: __init__.py  conversion.py  data.py
metrics/: __init__.py  evaluation.py
model_selection/: __init__.py  adaptive.py  candidates.py  config.py  guided_fusion.py  online_lambda.py  partition_initializer.py  partitions.py  scoring.py  types.py
runners/: __init__.py  benchmark.py  benchmark_cli.py  benchmark_cohort.py  benchmark_cohort_ray.py  benchmark_common.py  benchmark_mass.py  model_selection.py  multiregion_benchmark.py  outputs.py  pipeline.py  plotting.py  selection.py  settings.py  single_region_benchmark.py
runs/: benchmark_sim_v2_cuda.py  run_clipp2sim1k_benchmark.py
sim/: __init__.py  generation.py  plotting.py  workflows.py
sim_v2_results/: summarize_guided_admm.py
tests/: test_adaptive_lambda_path.py  test_benchmark_summarizer.py  test_cli_invocation.py  test_cluster_diameters.py  test_compact_boundaries.py  test_compressed_certificates.py  test_evaluation_alignment.py  test_exact_acceleration.py  test_graph_weights.py  test_guided_fusion.py  test_guided_fusion_dual_chunking.py  test_io_validation.py  test_kkt_residuals.py  test_missingness.py  test_multiplicity_posterior.py  test_online_lambda_controller.py  test_optimizer_diagnostics.py  test_partition_classification_refinement.py  test_partition_guided_selection.py  test_partition_icl_scoring.py  test_partition_refit_diagnostics.py  test_quotient_workset.py  test_refit_missingness.py  test_resource_limit_batch.py  test_selected_ari_reporting.py  test_sim1k_benchmark_scheduler.py  test_sim_v2_cuda_benchmark.py  test_streaming_complete_graph_admm.py  test_torch_likelihood.py
