[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipp2"
version = "0.1.0"
description = "Multi-region cellular prevalence clustering with binomial likelihood, major/minor multiplicity candidates, and graph fused lasso."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.5",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "torch>=2.0",
]
keywords = [
    "cancer-genomics",
    "clustering",
    "copy-number",
    "multi-region",
    "single-cell-free",
    "subclonal-reconstruction",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.scripts]
clipp2 = "clipp2.cli:main"
clipp2-simulate = "clipp2.sim.generation:main"
clipp2-prepare-simulation = "clipp2.sim.workflows:main"
clipp2-convert = "clipp2.io.conversion:main"
clipp2-single-region-benchmark = "clipp2.runners.single_region_benchmark:main"
clipp2-multiregion-benchmark = "clipp2.runners.multiregion_benchmark:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["clipp2*"]
